--- a/2016/03/12/2-one-button-latching-circuits.mkd
+++ b/2016/03/12/2-one-button-latching-circuits.mkd
@@ -1,24 +1,26 @@
 title: 2 Latching Push-ON-Push-OFF Circuits
 tags: electronics
 public: yes
-summary: 2 simple one-button latching circuits to turn on and off your project
+summary: ![soldered latching boards](static/img/2016/03/latch-boards-thumb.jpg) 2 simple one-button latching circuits to turn on and off your project
 
-Not so much time ago I built a fan driver from my fume extraction circuit, and
-it became clear that the sort of ON/OFF push button circuit is required. My basic
-research returned two principle results:
+Not so much time ago I built a fan driver from my fume extraction (powered from
+4 x AA-battery accumulators), and it became clear that the sort of ON/OFF push
+button circuit is required. My basic research revealed two principle results:
 
-0. This circuit from EDN, copied by Talking Elektronics (Colin Mitchell) (or
-   vice versa, can not really verify) 
-0. Another original circuit from END.
+0. [This circuit from EDN](http://www.edn.com/design/analog/4329227/Latching-power-switch-uses-momentary-action-pushbutton),
+    copied by [Talking Electronics (Colin Mitchell)](http://www.talkingelectronics.com/projects/200TrCcts/101-200TrCcts.html#20a)
+    (or vise versa, can not really
+verify) 
+0. [Another original latching circuit from END](http://www.edn.com/design/power-management/4427218/Latching-power-switch-uses-momentary-pushbutton).
 
 Each of these circuits has its problems:
 
-- the first circuit simply doesn't work in a provided configuration
-- the second one uses more expensive MOSFET transistors, which often do not
-  work with 5v - or less - power supplies.
+- the first circuit simply doesn't work as is
+- the second one uses more expensive MOSFET transistors (and rare low-voltage
+  P-Channel ones), which often do not work with 5v - or less - power supplies.
 
 So, after some experimentation, trials and errors the following circuits were
-produced soldered and tested:
+elaborated:
 
 ![latch-01-npn-driver](/static/img/2016/03/latch-01-npn.png)
 
@@ -28,6 +30,72 @@ produced soldered and tested:
 
 ![latch-02-pnp-driver](/static/img/2016/03/latch-02-pnp.png)
 
+\- and later soldered and tested (in the same order from top to bottom) using
+my [Stripboard Manhattan](http://blog.grozak.com/2016/02/17/01-fast-prototyping-stripboard-tht-smd)
+technique:
+
+<a href="/static/img/2016/03/latch-boards.jpg"><img src="/static/img/2016/03/latch-boards-thumb.jpg"/></a>
+
 ## Principle of Operation
 
-In each of this circuits you have a capacitor and a target transistor. Usually target transistor start's in the OFF state, and capacitor charge has a polarity to open it. After opening a transistor (putting it in a conducting state) cap is charged with the opposite rail, thus being able to close a target transistor. 
+In each of the circuits you have a capacitor and a target transistor. By
+charging or discharging the capacitor the base is either stripped off charge
+carriers or flooded by them depending on the transistor type. Usually target
+transistor starts in the OFF state, and capacitor charge has a polarity to
+open it. After opening a transistor (putting it in a conducting state) cap is
+charged with the opposite polarity, thus being able to close a target transistor.
+
+Let take a look at the second circuit. _C3_ is a **set** capacitor - it ensures
+the Q2 tr-r starts in a closed state and thus the whole system is not
+conducting. Via _R1_ and _R2_ _C2_ charges to the potential of the Vcc rail.
+Time constant _(R1+R2)*C2_ defines the time which is required to allow _C2_
+enough charge to be able to turn-on the whole system.  Now we have a storage
+with "tons" of electrons in it; by pressing push button we inject the absolute
+majority of them (R5 can be considered almost as an open circuit, comparing to
+the base-emitter junction impedance). _Q3_ starts to conduct (due to the effect
+of [positive
+feedback](https://en.wikipedia.org/wiki/Positive_feedback#In_electronics) - and
+the whole system is conducting and working now.
+
+Collector of the _Q1_ is now sitting a fraction above the negative rail
+potential, thus completely discharging _C3_ via _R2_ and making it almost equal
+to a potential of the negative rail. _R2*C3_ time constant defines the time
+required to discharge _C3_ to the potential of the negative rail. Finally, C3
+is able "to suck in" the charges from the base of Q3, thus putting it back to a
+non-conducting state if the _S1_ button is pressed again. That's it!
+
+So, basic principles are very simple:
+
+0. Find charge paths of the capacitor
+0. Find a target tr-r.
+0. When the whole system is put in a conducting state, find a discharging path
+   and a target tr-r.
+
+That's all!
+
+## Fixes and tweaks.
+
+0. **2nd circuit**
+    - 1 MOhm is too big for the R2 - it will have no influence on the turning-off
+        action, while it should act as a pull-up resistor during the 'turn-off'
+        period. Basically, the circuit doesn't turn-off with 1M R2 resistor value.
+    - 470k for R2 is too big it won't allow to switch the circuit off instantly,
+        especially if _C2_ has bigger value. I replaced it with 1k to speed up
+        the overall charge/discharge times.
+    - power part can be directly integrated into circuit: _R9/10/11_ and _Q4/5_ could be completely removed,
+        value of _C2_ should be increased to _47uF_ (at least in my tests is was the most stable value) and
+        _Q3_ should be switched to power transistor (or pair of BC337/8, depending on the load.
+
+0. **3rd circuit** 
+    - schematics was completely re-drawn, as original one makes it very hard to
+      read
+    - 10k value of _R3_ in the original circuit (_R1_ in my variant) was a bit
+      too big - not enough current entered the base of Q2 to open it fully, so
+      I tried 5k6 and it worked perfectly
+    - _R5/R6_ voltage divider should be introduced in order to prevent big
+      voltage drop across _R7_ and _R8_ 1R resistors
+
+That is all for the moment! Please, try the circuits, build them and adapt for
+your own needs!
+
+Mike.
